# errordebugger-sdks

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE.md
.github/workflows/: publish-sdks.yml
csharp/: README.md
csharp/ErrorDebugger/: Config.cs  ErrorDebugger.cs  ErrorDebugger.csproj
csharp/ErrorDebugger.Tests/: ErrorDebugger.Tests.csproj  ErrorDebuggerTests.cs
csharp/src/: Config.cs  ErrorDebugger.cs  ErrorDebugger.csproj
csharp/tests/: ErrorDebugger.Tests.csproj  ErrorDebuggerTest.cs
docs/: MONOREPO_SETUP.md
go/: README.md  config.go  errordebugger.go  errordebugger_test.go  go.mod  go.sum  version.go
java/: README.md  build.gradle  pom.xml
javascript/: .npmignore  README.md  package-lock.json  package.json  smoke-test.js
javascript/coverage/: clover.xml  coverage-final.json  lcov.info
javascript/src/: index.d.ts  index.js  instrumentation.js
javascript/tests/: init.test.js
php/: README.md  composer.json
php/src/: Config.php  ErrorDebugger.php
php/tests/: ErrorDebuggerTest.php
python/: .coverage  README.md  requirements.txt  setup.py
python/errordebugger/: __init__.py  instrumentation.py
python/errordebugger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: conftest.py  test_capture.py  test_init.py
ruby/: Gemfile  README.md  errordebugger.gemspec
ruby/lib/: errordebugger.rb
rust/: Cargo.toml  LICENSE  README.md
rust/src/: config.rs  error.rs  lib.rs
rust/tests/: integration_test.rs
rust/tests/integration/test_app/: Cargo.toml
rust/tests/integration/test_app/src/: main.rs
(+17 files in other folders)
