[package]
name = "errordebugger"
version = "0.1.0"
edition = "2021"
description = "A simplified Rust SDK for ErrorDebugger via OpenTelemetry"
license = "MIT"
repository = "https://github.com/usama8199/errordebugger-sdks"

[dependencies]
opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", features = ["http-proto", "reqwest-client"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
